# movieWiz

./: .env.example  .gitignore  README.md  aggregator.py  app.py  cache.py  enricher.py  extractor.py  image_analyzer.py  main.py  parser.py  pyproject.toml  requirements.txt  sessions.py  summarizer.py  utils.py  zip_extractor.py
.claude/: settings.local.json
.streamlit/: secrets.toml.example
docs/: api-keys.md  architecture.md  data-model.md
docs/superpowers/plans/: 2026-05-31-media-feature.md
docs/superpowers/specs/: 2026-05-31-media-feature-design.md
tests/: test_aggregator_images.py  test_image_analyzer.py  test_parser.py  test_parser_media.py  test_zip_extractor.py
